# mongodb-vs-postgres

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
mongobench/: db.sqlite3  manage.py
mongobench/mongo/: apps.py  models.py  views.py
mongobench/mongo/management/commands/: fill_db.py
mongobench/mongobench/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
mongobench/postgres/: apps.py  models.py  views.py
mongobench/postgres/management/commands/: fill_db_pg.py
mongobench/postgres/migrations/: 0001_initial.py  0002_post_tags.py
